--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ nav{
     color: #fff;
     font-size: 25px;
     line-height: 60px;
-    padding: 0 75px;
+    padding: 0 50px;
     font-weight: bold;
 }
 
@@ -72,7 +72,7 @@ a.active, a:hover{
 @media (max-width: 952px){
     lable.logo{
         font-size: 30px;
-        padding-left: 50px;
+        padding: 0 20px;
     }
     nav ul li a {
         font-size: 16px;
@@ -81,6 +81,9 @@ a.active, a:hover{
 @media (max-width: 600px){
     .checkbtn{
         display: block;
+    }
+    lable .logo{
+        padding: 0 20px;
     }
     ul{
         position: fixed;
